cf.yml
Resources:
  MyInstance:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone: ap-south-1a
      ImageId: ami-00bb6a80f01f03502
      InstanceType: t2.micro
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: 8
      SecurityGroups:
        - !Ref MySecurityGroup
      UserData:
        Fn::Base64: |
          #!/bin/bash
          apt-get update -y
          apt-get upgrade -y
          curl -fsSL https://get.docker.com -o install-docker.sh
          sh install-docker.sh
          apt-get install -y git
          git clone https://github.com/nishant-p-7span/intern-project.git /home/ubuntu/intern-project
          docker compose -f /home/ubuntu/intern-project/docker-compose.yml up -d
      Tags:
        - Key: Name
          Value: Production
  
  MyInstance2:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone: ap-south-1a
      ImageId: ami-00bb6a80f01f03502
      InstanceType: t2.micro
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: 8
      SecurityGroups:
        - !Ref MySecurityGroup
      UserData:
        Fn::Base64: |
          #!/bin/bash
          apt-get update -y
          apt-get upgrade -y
          curl -fsSL https://get.docker.com -o install-docker.sh
          sh install-docker.sh
          apt-get install -y git
          git clone https://github.com/nishant-p-7span/intern-project.git /home/ubuntu/intern-project
          git checkout develop
          docker compose -f /home/ubuntu/intern-project/docker-compose.yml up -d
      Tags:
        - Key: Name
          Value: Development
          
  MySecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: MySecurityGroup
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 3000
          ToPort: 3000
          CidrIp: 0.0.0.0/0
